re3:fixing issue with combobox on IE
git-svn-id: https://svn.bgdi.admin.ch/mf-chsdi/trunk/chsdi@2600 e100092c-b5e6-494f-8bdf-19c1ff2a4001

--- a/chsdi/public/demo/re3.css
+++ b/chsdi/public/demo/re3.css
@@ -35,13 +35,7 @@ width: 100%
 height: 40px;
 }
 
-div#lang {
-  margin: 0 10px 5px 0;
-}
 
-#lang select {
-    width: 75px !important;
-}
 
 #header table {
     width: 100%;
@@ -175,7 +169,14 @@ a {
     background-color: #8c8c8c;
     float:right;
     margin-top: 8px;
+    width: 250px;
 }
+
+div#lang {
+    width: 75px;
+    margin: 0 10px 5px 0;
+}
+
 select { 
     border:0; 
     color:#aaa; 
@@ -188,9 +189,9 @@ select {
 }
 
 
-input, textarea,  option {
+/*input, textarea,  option {
  background-color:#fff;
- }
+ } */
 input, textarea {
  padding:3px;
  border:1px solid #ccc;
